// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remark atom highlights plugin does not blast off when no lang is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": null,
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 26,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--text syntax--plain syntax--null-grammar\\"><span>//&nbsp;Atom&nbsp;Highlights</span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 26,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin generates highlighted code 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 28,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin has codewraps and fileicons when enabled in inline config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{ codeWrap: true, showFileIcon: true  }",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 67,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<span class='highlighted-file-icon js-icon medium-yellow'></span><div class='highlight'><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 67,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin has codewraps when codewrapping is enabled 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 28,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class='highlight'><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin has codewraps when inline codewrapping is enabled 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{ codeWrap: true }",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 46,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class='highlight'><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 46,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin has codewraps with specific class when codewrapping is enabled 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 28,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class='midnight'><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight code when filename name is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "test.js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 33,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 33,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight code when language name is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "javascript",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 36,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--text syntax--plain syntax--null-grammar\\"><span>//&nbsp;Atom&nbsp;Highlights</span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 36,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight codes from addition langs from plugin config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "rs",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 28,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--rust\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--rust\\"><span>//</span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight codes from addition langs when passed in inline config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "rs{languagePackage: \\"language-rust\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--rust\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--rust\\"><span>//</span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 61,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight codes from scope when scope is provided and languagePackage is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "html{scopeName:\\"source.rust\\", languagePackage:\\"language-rust\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 82,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--rust\\"><span class=\\"syntax--keyword syntax--other syntax--fn syntax--rust\\"><span>fn</span></span><span>&nbsp;</span><span class=\\"syntax--entity syntax--name syntax--function syntax--rust\\"><span>main</span></span><span>()&nbsp;</span><span>{</span><span>}</span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 82,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight codes from scope when scope is provided; it would try to use js even if rs is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "rs{scopeName: \\"source.js\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 51,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 51,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight when inline config is provided in single quote 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{scopePrefix: 'source--'}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 52,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source--source source--js\\"><span class=\\"source--comment source--line source--double-slash source--js\\"><span class=\\"source--punctuation source--definition source--comment source--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 52,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin inline scopePrefix 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{scopePrefix: \\"source--\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 52,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source--source source--js\\"><span class=\\"source--comment source--line source--double-slash source--js\\"><span class=\\"source--punctuation source--definition source--comment source--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 52,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin loads grammars from inline config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "rs{languagePackage: \\"language-rust\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--rust\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--rust\\"><span>//</span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 61,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin override scopePrefix from config when inline config is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{scopePrefix: \\"\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 44,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 44,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should highlight line numbers 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{highlightLines: (1-2, 5)}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 8,
          "offset": 166,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line highlighted-line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--support syntax--variable syntax--js\\"><span>module</span></span><span class=\\"syntax--meta syntax--function syntax--arrow syntax--js\\"><span class=\\"syntax--meta syntax--delimiter syntax--method syntax--period syntax--js\\"><span>.</span></span><span class=\\"syntax--entity syntax--name syntax--function syntax--js\\"><span>exports</span></span><span>&nbsp;</span><span class=\\"syntax--keyword syntax--operator syntax--assignment syntax--js\\"><span>=</span></span><span>&nbsp;</span><span class=\\"syntax--meta syntax--parameters syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--parameters syntax--begin syntax--bracket syntax--round syntax--js\\"><span>(</span></span><span class=\\"syntax--variable syntax--parameter syntax--function syntax--js\\"><span>options</span></span><span class=\\"syntax--punctuation syntax--definition syntax--parameters syntax--end syntax--bracket syntax--round syntax--js\\"><span>)</span></span></span><span>&nbsp;</span><span class=\\"syntax--storage syntax--type syntax--function syntax--arrow syntax--js\\"><span>=&gt;</span></span></span><span>&nbsp;</span><span class=\\"syntax--meta syntax--function syntax--arrow syntax--js\\"><span class=\\"syntax--meta syntax--parameters syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--parameters syntax--begin syntax--bracket syntax--round syntax--js\\"><span>(</span></span><span class=\\"syntax--variable syntax--parameter syntax--function syntax--js\\"><span>ast</span></span><span class=\\"syntax--punctuation syntax--definition syntax--parameters syntax--end syntax--bracket syntax--round syntax--js\\"><span>)</span></span></span><span>&nbsp;</span><span class=\\"syntax--storage syntax--type syntax--function syntax--arrow syntax--js\\"><span>=&gt;</span></span></span><span>&nbsp;</span><span class=\\"syntax--punctuation syntax--definition syntax--function syntax--body syntax--begin syntax--bracket syntax--curly syntax--js\\"><span>{</span></span></span></div><div class=\\"line highlighted-line\\"><span class=\\"syntax--source syntax--js\\"><span>&nbsp;&nbsp;</span><span class=\\"syntax--entity syntax--name syntax--type syntax--object syntax--console syntax--js\\"><span>console</span></span><span class=\\"syntax--meta syntax--method-call syntax--js\\"><span class=\\"syntax--meta syntax--delimiter syntax--method syntax--period syntax--js\\"><span>.</span></span><span class=\\"syntax--support syntax--function syntax--console syntax--js\\"><span>log</span></span><span class=\\"syntax--meta syntax--arguments syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--arguments syntax--begin syntax--bracket syntax--round syntax--js\\"><span>(</span></span><span class=\\"syntax--string syntax--quoted syntax--double syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--string syntax--begin syntax--js\\"><span>&quot;</span></span><span>This</span><span class=\\"syntax--punctuation syntax--definition syntax--string syntax--end syntax--js\\"><span>&quot;</span></span></span><span class=\\"syntax--punctuation syntax--definition syntax--arguments syntax--end syntax--bracket syntax--round syntax--js\\"><span>)</span></span></span></span><span class=\\"syntax--punctuation syntax--terminator syntax--statement syntax--js\\"><span>;</span></span></span></div><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span>&nbsp;&nbsp;</span><span class=\\"syntax--entity syntax--name syntax--type syntax--object syntax--console syntax--js\\"><span>console</span></span><span class=\\"syntax--meta syntax--method-call syntax--js\\"><span class=\\"syntax--meta syntax--delimiter syntax--method syntax--period syntax--js\\"><span>.</span></span><span class=\\"syntax--support syntax--function syntax--console syntax--js\\"><span>log</span></span><span class=\\"syntax--meta syntax--arguments syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--arguments syntax--begin syntax--bracket syntax--round syntax--js\\"><span>(</span></span><span class=\\"syntax--string syntax--quoted syntax--double syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--string syntax--begin syntax--js\\"><span>&quot;</span></span><span>is</span><span class=\\"syntax--punctuation syntax--definition syntax--string syntax--end syntax--js\\"><span>&quot;</span></span></span><span class=\\"syntax--punctuation syntax--definition syntax--arguments syntax--end syntax--bracket syntax--round syntax--js\\"><span>)</span></span></span></span><span class=\\"syntax--punctuation syntax--terminator syntax--statement syntax--js\\"><span>;</span></span></span></div><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span>&nbsp;&nbsp;</span><span class=\\"syntax--entity syntax--name syntax--type syntax--object syntax--console syntax--js\\"><span>console</span></span><span class=\\"syntax--meta syntax--method-call syntax--js\\"><span class=\\"syntax--meta syntax--delimiter syntax--method syntax--period syntax--js\\"><span>.</span></span><span class=\\"syntax--support syntax--function syntax--console syntax--js\\"><span>log</span></span><span class=\\"syntax--meta syntax--arguments syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--arguments syntax--begin syntax--bracket syntax--round syntax--js\\"><span>(</span></span><span class=\\"syntax--string syntax--quoted syntax--double syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--string syntax--begin syntax--js\\"><span>&quot;</span></span><span>a</span><span class=\\"syntax--punctuation syntax--definition syntax--string syntax--end syntax--js\\"><span>&quot;</span></span></span><span class=\\"syntax--punctuation syntax--definition syntax--arguments syntax--end syntax--bracket syntax--round syntax--js\\"><span>)</span></span></span></span><span class=\\"syntax--punctuation syntax--terminator syntax--statement syntax--js\\"><span>;</span></span></span></div><div class=\\"line highlighted-line\\"><span class=\\"syntax--source syntax--js\\"><span>&nbsp;&nbsp;</span><span class=\\"syntax--entity syntax--name syntax--type syntax--object syntax--console syntax--js\\"><span>console</span></span><span class=\\"syntax--meta syntax--method-call syntax--js\\"><span class=\\"syntax--meta syntax--delimiter syntax--method syntax--period syntax--js\\"><span>.</span></span><span class=\\"syntax--support syntax--function syntax--console syntax--js\\"><span>log</span></span><span class=\\"syntax--meta syntax--arguments syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--arguments syntax--begin syntax--bracket syntax--round syntax--js\\"><span>(</span></span><span class=\\"syntax--string syntax--quoted syntax--double syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--string syntax--begin syntax--js\\"><span>&quot;</span></span><span>test</span><span class=\\"syntax--punctuation syntax--definition syntax--string syntax--end syntax--js\\"><span>&quot;</span></span></span><span class=\\"syntax--punctuation syntax--definition syntax--arguments syntax--end syntax--bracket syntax--round syntax--js\\"><span>)</span></span></span></span><span class=\\"syntax--punctuation syntax--terminator syntax--statement syntax--js\\"><span>;</span></span></span></div><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--function syntax--body syntax--end syntax--bracket syntax--curly syntax--js\\"><span>}</span></span><span class=\\"syntax--punctuation syntax--terminator syntax--statement syntax--js\\"><span>;</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 8,
      "offset": 166,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should replace pre class from config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 41,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should replace pre class from inlineconfig 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{ preClass: { removeClass: true } }",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 76,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 76,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should set custom pre class from config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 41,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"foo bar\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should show fileicon 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 41,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<span class='highlighted-file-icon js-icon medium-yellow'></span><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should show filename 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 41,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<span class='highlighted-file-name'>js</span><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"syntax--source syntax--js\\"><span class=\\"syntax--comment syntax--line syntax--double-slash syntax--js\\"><span class=\\"syntax--punctuation syntax--definition syntax--comment syntax--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
